# endpoint_proxy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.config.json  build_images.sh  config.yaml  route_config.yaml  test_config.yaml
.cargo/: config.toml
container/: Builder_Dockerfile  Dockerfile  builder_Dockerfile
containers/: Dockerfile  Dockerfile.template  endpoint_proxy_server.sh
scripts/: build_artifacts.sh  build_image.sh  endpoint_proxy_server.sh
src/: endpoint_map.rs  http_client.rs  http_client_provider.rs  main.rs  proxy_item.rs  proxy_service.rs  route_config.rs  std_logger.rs
src/proxy_service/: proxy_config.rs  proxy_factory.rs  proxy_route_service.rs
