[package]
name = "rss_proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
strip = true
incremental = true

[dependencies]
actix-web = { version = "4.4.0", features = ["cookies", "macros", "compress-gzip", "secure-cookies", "actix-macros", "__compress", "actix-web-codegen", "cookie"], default-features = false }
chrono = { version = "0.4.31", features = ["clock", "std", "alloc"] }
log = { version = "0.4.20" }
reqwest = { version = "0.11.20", features = ["cookies", "stream"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_yaml = { version = "0.9.25" }
openssl = { version = "*", features = ["vendored"] }
