[package]
name = "endpoint_proxy"
version = "1.2.0"
edition = "2024"
authors = ["Timur Olur <pm@smdd.dev>"]
description = "Simple HTTP middleware service"
documentation = "https://github.com/SuperioOne/endpoint_proxy"
homepage = "https://github.com/SuperioOne/endpoint_proxy"
license = "Apache-2.0"
repository = "https://github.com/SuperioOne/endpoint_proxy"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
actix-cors = { version = "0.7" }
actix-web = { version = "4" }
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3" }
reqwest = { version = "0.12", default-features = false, features = [
        "cookies",
        "socks",
        "system-proxy",
        "charset",
        "rustls-tls-native-roots",
] }
serde = { version = "1", features = ["serde_derive"] }
serde_yaml = { version = "0.9" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
